[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyCHAS"
version = "1.0.2"
readme = "README.md"
description = "Python C/C++ header amalgamation script"
authors = [
    { name = "Kara", email = "contact@notokay.dev" }
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: BSD',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

[project.urls]
"Source" = "https://github.com/EinKara/PyCHAS/"
"Sponsor" = "https://github.com/sponsors/EinKara/"

[project.scripts]
pychas = "PyCHAS.pychas:main"