[metadata]
name = PyCHAS
version = 1.0.1
description = Python C/C++ header amalgamation script
long_description = Python C/C++ header amalgamation script
license_file = LICENSE
readme = README.md
author = NotOkay
author_email = contact@notokay.dev
url = https://notokay.dev/
#project_urls = 
#    Source = https://github.com/EinKara/PyCHAS/
classifiers = 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = PyCHAS
python_requires = >=3.7

[options.entry_points]
console_scripts =
    pychas = PyCHAS.pychas:main